# soma

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_JA.md  pyproject.toml  soma.spec  spectrogram-enhancement-implementation-order.md  spectrogram-enhancement.md
.codex/environments/: environment.toml
.gemini/: config.yaml  styleguide.md
benchmarks/: tiled.json
docs/: design.md  main-thread-optimization-plan.md  multiprocess-spectrogram-design.md  spec.md  spec_JA.md  spectrogram-design.md  spectrogram-improvement-plan.md  ui.md  zoom-cwt-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
scripts/: benchmark_snap_trace.py  benchmark_spectrogram_tiles.py  build-app.sh  build-dmg.sh  compare_spectrogram_methods.py  tune_multires_resolution.py
src/soma/: __init__.py  __main__.py  analysis.py  api_schema.py  app.py  audio_utils.py  cache_server.py  constants.py  document.py  exporter.py  logging_utils.py  midi_player.py  models.py  partial_store.py  persistence.py  preview_cache.py  recent_projects.py  session.py  spectrogram_renderer.py  synth.py  (+1 more)
tests/: test_analysis.py  test_api_schema.py  test_audio_utils.py  test_document_async_params.py  test_document_harmonic_probe.py  test_document_playback_normalize.py  test_document_source.py  test_exporter.py  test_midi_player_probe.py  test_persistence.py  test_preview_cache.py  test_recent_projects.py  test_scenario.py  test_spectrogram_renderer.py  test_synth_probe.py  test_undo_redo.py  test_undo_redo_integration.py
(+40 files in other folders)
