[project]
name = "soma"
version = "0.1.0"
description = "Sonic Observation, Musical Abstraction"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pywavelets>=1.9.0",
    "pywebview>=6.1",
    "scipy>=1.17.0",
    "sounddevice>=0.5.4",
]

[project.scripts]
soma = "soma:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
