[project]
name = "soma"
version = "0.1.0"
description = "Sonic Observation, Musical Abstraction"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "mido>=1.3.2",
    "pywavelets>=1.9.0",
    "pywebview>=6.1",
    "scipy>=1.17.0",
    "sounddevice>=0.5.4",
]

[project.scripts]
soma = "soma:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.12.0",
    "pytest>=8.4.0",
    "pyinstaller>=6.18.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "I", "B", "UP", "SIM"]
lint.ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
